# opensprite

./: .gitignore  AGENTS.md  FLOW.md  README.md  main.py  pyproject.toml  requirements.txt  setup-opensprite.sh
apps/web/: app.js  build.mjs  index.html  package.json  styles.css  vite.config.mjs
docs/: task-flow-guide.md
scripts/: install.cmd  install.ps1  install.sh  uninstall.cmd  uninstall.ps1
src/minibot/: __init__.py  agent.py  main.py  message.py  message_queue.py  queue.py  workspace.py
src/opensprite/: __init__.py  harness.py  main.py  permission_constants.py  planning_mode.py  questions.py  run_schema.py  runtime.py  session_entries.py  subagent_profiles.py  subagent_session.py  tool_names.py
tests/: test_packaging.py  test_planning_mode.py  test_questions.py  test_runtime_cron.py  test_runtime_mcp.py  test_runtime_unconfigured_llm.py  test_task_planning_mode.py  test_user_overlay_identity.py
tests/agent/: agent_test_helpers.py  task_contract_test_helpers.py  test_active_task_status.py  test_agent_images.py  test_agent_process.py  test_agent_tool_reload.py  test_agent_verify.py  test_audio_input.py  test_auto_continue.py  test_auto_continue_prompt_policy.py  test_auto_continue_reason_policy.py  test_change_path_policy.py  test_command_version_policy.py  test_completion_blocker_policy.py  test_completion_gate.py  test_completion_gate_policy.py  test_completion_judge.py  test_completion_status.py  test_completion_task_policy.py  test_completion_verifier.py  test_consolidation.py  test_context_compaction_policy.py  test_curator.py  test_curator_policy.py  test_evidence_gate_policy.py  test_execution.py  test_execution_fallback_policy.py  test_file_changes.py  test_follow_up_intent.py  test_harness_inventory.py  test_harness_policy.py  test_harness_profile.py  test_harness_runtime.py  test_harness_scorecard.py  test_harness_sensors.py  test_history_retrieval_policy.py  test_learning_ledger.py  test_llm_call_guidance.py  test_llm_resolution_policy.py  test_main_agent_system_prompt_integration.py  (+52 more)
tests/auth/: test_codex.py  test_copilot.py  test_credentials.py
tests/bus/: test_dispatcher.py  test_session_commands.py
tests/channels/: test_bootstrap.py  test_telegram_media.py  test_telegram_typing.py  test_web.py
tests/cli/: test_auth_cli.py  test_chat_cli.py  test_chat_smoke_cli.py  test_config_cli.py  test_cron_cli.py  test_onboard.py  test_search_cli.py  test_service_background.py  test_service_linux.py  test_status_cli.py
tests/config/: test_llm_presets.py  test_mcp_settings.py  test_media_settings.py  test_provider_settings.py  test_schema.py
tests/context/: test_file_builder_active_task.py  test_file_builder_learning.py  test_file_builder_retrieval_strategy.py  test_file_builder_skills.py  test_file_builder_user_profile.py  test_file_builder_workspace_agents.py  test_file_builder_workspace_task_guidance.py  test_paths_isolation.py  test_recent_summary_builder.py
tests/cron/: test_service.py
tests/documents/: test_active_task.py  test_memory.py  test_recent_summary.py  test_user_overlay.py  test_user_profile.py
tests/evals/: test_harness_live_scenarios.py  test_harness_profiles.py
tests/llms/: test_anthropic_messages.py  test_minimax_reasoning.py  test_openai_responses.py  test_openai_streaming.py  test_openrouter_reasoning.py  test_request_builder.py  test_retry.py  test_runtime_provider.py  test_tool_args.py
tests/media/: test_minimax_image_provider.py  (+2 more)
(+471 files in other folders)
