[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minibot"
version = "0.1.0"
description = "Ultra-lightweight personal AI assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]
dependencies = [
    "aiohttp>=3.0.0",
    "beautifulsoup4>=4.0",
    "html2text>=2020.1.16",
    "lancedb>=0.29.0",
    "loguru>=0.7.0",
    "markdown>=3.0",
    "openai>=1.0.0",
    "pyarrow>=16.0.0",
    "python-daemon>=3.0.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=20.0",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
minibot = "minibot.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["minibot*"]
