[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opensprite"
version = "0.1.0"
description = "Ultra-lightweight personal AI assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]
dependencies = [
    "aiohttp>=3.0.0",
    "beautifulsoup4>=4.0",
    "croniter>=6.0.0",
    "httpx>=0.28.0,<1.0.0",
    "html2text>=2020.1.16",
    "lancedb>=0.29.0",
    "loguru>=0.7.0",
    "mcp>=1.26.0,<2.0.0",
    "openai>=1.0.0",
    "pyarrow>=16.0.0",
    "python-daemon>=3.0.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=20.0",
    "questionary>=2.1.0",
    "typer>=0.20.0,<1.0.0",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
opensprite = "opensprite.cli.commands:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
opensprite = [
    "config/*.template",
    "templates/*.md",
    "templates/memory/*.md",
    "skills/*/*.md",
    "skills/*/*.py",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["opensprite*"]
